<?xml version="1.0"?>
<package format="2">
  <name>pozyx_ros_driver</name>
  <version>0.0.0</version>
  <description>The pozyx_ros_driver package</description>

  <author email="nikv96@gmail.com">nikhil</author>
  <maintainer email="nikv96@gmail.com">nikhil</maintainer>

  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
